--- a/v2/package.json
+++ b/v2/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.27",
     "expo": "~54.0.31",
     "expo-linking": "^8.0.11",
