--- a/v3/app.json
+++ b/v3/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "TechQuiz",
-    "slug": "tech-quiz",
-    "scheme": "techquiz",
+    "name": "TechTok",
+    "slug": "techtok",
+    "scheme": "techtok",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
