--- a/v3/package.json
+++ b/v3/package.json
@@ -15,6 +15,7 @@
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.8.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
